html extension added

--- a/base.html
+++ b/base.html
@@ -29,7 +29,7 @@
 
 	  <ul class="nav navbar-left nav-justified">
 	    <li>
-	      <a href="/blog" title="go to: blog"><span>blog</span></a>
+	      <a href="/blog.html" title="go to: blog"><span>blog</span></a>
 	    </li>
 	    <li>
 	      <a href="/#features" title="go to: features"><span>features</span></a>
