--- a/base.html
+++ b/base.html
@@ -62,8 +62,8 @@
 	  <div class="cnt">
 	    <p>
 	      <strong>email</strong>
-	      <a href="mailto:contact@hippyvm.com">
-		contact@hippyvm.com
+	      <a href="mailto:fijall@gmail.com">
+		fijall@gmail.com
 	      </a>
 	    </p>
 
