--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       <div class="container container-630">
 
 	<header>
-	  <h1 class="text-center">People <small>Who makes HippyVM</small></h1>
+	  <h1 class="text-center">People <small>Who make HippyVM</small></h1>
 	</header>
 
 	<div id="peoples-slider" data-ride="carousel" class="carousel slide">
